--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -57,14 +57,14 @@
   keywords = {URL},
 }
 
-@Online{Wiki_CUDA,
-  author   = {Wikipedia{: }CUDA},
-  date     = {2022-08-28},
+@Online{Wiki_OSAL,
+  author   = {Wikipedia{: }OSAL},
+  date     = {2022-04-28},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
-  title    = {CUDA},
-  url      = {https://en.wikipedia.org/w/index.php?title=CUDA&oldid=1107147697},
+  title    = {OSAL},
+  url      = {https://en.wikipedia.org/w/index.php?title=Operating_system_abstraction_layer&oldid=1085096210},
   language = {English},
-  urldate  = {2022-08-30},
+  urldate  = {2022-09-01},
   keywords = {URL},
 }
 
@@ -200,14 +200,14 @@
 }
 
 @Online{Wiki_IrisDS,
-  author   = {Wikipedia{: }Iris},
+  author   = {Wikipedia{: }Iris{ }dataset},
   date     = {2022-08-08},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
-  keywords = {URL},
-  language = {English},
   title    = {Iris flower data set},
   url      = {https://en.wikipedia.org/w/index.php?title=Iris_flower_data_set&oldid=1103056245},
+  language = {English},
   urldate  = {2022-08-31},
+  keywords = {URL},
 }
 
 @InCollection{Fisher_1936,
@@ -223,6 +223,72 @@
   abstract = {The articles published by the Annals of Eugenics (1925–1954) have been made available online as an historical archive intended for scholarly use. The work of eugenicists was often pervaded by prejudice against racial, ethnic and disabled groups. The online publication of this material for scholarly research purposes is not an endorsement of those views nor a promotion of eugenics in any way.},
   journal  = {Annals of human genetics},
   keywords = {book},
+}
+
+@Online{Wiki_CUDA,
+  author   = {Wikipedia{: }CUDA},
+  date     = {2022-08-28},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {CUDA},
+  url      = {https://en.wikipedia.org/w/index.php?title=CUDA&oldid=1107147697},
+  language = {English},
+  urldate  = {2022-08-30},
+  keywords = {URL},
+}
+
+@Online{Wiki_Iris_setosa,
+  author   = {Wikipedia{: }Iris{ }setosa},
+  date     = {2022-08-05},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Iris setosa},
+  url      = {https://en.wikipedia.org/w/index.php?title=Iris_setosa&oldid=1102525458},
+  language = {English},
+  urldate  = {2022-09-01},
+  keywords = {URL},
+}
+
+@Online{Wiki_Iris_virginica,
+  author   = {Wikipedia{: }Iris{ }virginica},
+  date     = {2022-06-21},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Iris virginica},
+  url      = {https://en.wikipedia.org/w/index.php?title=Iris_virginica&oldid=1094181148},
+  language = {English},
+  urldate  = {2022-09-01},
+  keywords = {URL},
+}
+
+@Online{Wiki_Iris_versicolor,
+  author   = {Wikipedia{: }Iris{ }versicolor},
+  date     = {2022-06-04},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Iris versicolor},
+  url      = {https://en.wikipedia.org/w/index.php?title=Iris_versicolor&oldid=1091474628},
+  language = {English},
+  urldate  = {2022-09-01},
+  keywords = {URL},
+}
+
+@Online{Wiki_Sepal,
+  author   = {Wikipedia{: }Sepal},
+  date     = {2022-05-23},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Sepal},
+  url      = {https://en.wikipedia.org/w/index.php?title=Sepal&oldid=1089457643},
+  language = {English},
+  urldate  = {2022-09-01},
+  keywords = {URL},
+}
+
+@Online{Wiki_Petal,
+  author   = {Wikipedia{: }Petal},
+  date     = {2022-05-15},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Petal},
+  url      = {https://en.wikipedia.org/w/index.php?title=Petal&oldid=1087986268},
+  language = {English},
+  urldate  = {2022-09-01},
+  keywords = {URL},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
